fix: minor improvement